fix (a11y): complete mixin for invisible content

--- a/tools/visually-hidden/_test.scss
+++ b/tools/visually-hidden/_test.scss
@@ -11,7 +11,17 @@ $sparkle-show-docs: false;
       }
       @include expect {
         position: fixed;
-        clip: rect(0, 0, 0, 0);
+        right: 100%;
+        bottom: 100%;
+        clip: rect(1px, 1px, 1px, 1px);
+        clip-path: inset(50%);
+
+        &:focus {
+          left: 0;
+          right: auto;
+          top: 0;
+          bottom: auto;
+        }
       }
     }
   }
